# Box2Dxt

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  audit.md  plan.md
.github/workflows/: build.yml  pages.yml
docs/: ROADMAP.md  api-reference.md  architecture.md  asset-expansion-plan.md  building.md  expansion-prep.md  game-engine-spec.md  getting-started.md  holdem-spec.md  kit-guide.md  kit-reference.md  platformer-demo-review.md  platformer-polish-plan.md
docs/archive/: expansion-prep.md  game-engine-spec.md
docs/holde-em/: CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md  holdem-spec.md
docs/holde-em/tools/: check-livecodescript.py
docs/hole-em/: CLAUDE.md  IMPLEMENTATION-PLAN.md  README.md  holdem-spec.md
examples/: box2dxt-contraption-builder.livecodescript  box2dxt-demo.livecodescript  box2dxt-microgame.livecodescript  box2dxt-platformer.livecodescript  box2dxt-selftest.livecodescript  box2dxt-slingshot.livecodescript  box2dxt-spike-gamekit.livecodescript
prebuilt/: README.md  libbox2dxt-macos-universal.dylib
src/: box2d_lc.c  box2dxt-kit.livecodescript  box2dxt.lcb
tests/: smoke_test.c
tools/: audit-platformer.py  build-docs.py  check-livecodescript.py  make-release.py  package-extension.py  sync-embedded-kit.py
website/: 404.html  README.md  app.js  index.html  styles.css
website/docs/: api-reference.html  architecture.html  building.html  expansion-prep.html  game-engine-spec.html  getting-started.html  index.html  kit-guide.html  kit-reference.html
